Allow testing 10.0.16299 SDK bug

This change allows building with the 10.0.16299 SDK, and includes
wrl\event.h earlier so that problems with it are hit while compiling
base.

Bug: 780323
Change-Id: I1acfb5dfd20a946cfc6177bd3628517a0f8aa5d9